{
    "name": "Touch Controls",
    "maps": [
        {
            "name": "Touch",
            "id": "67c3d213-8eaf-4eb8-a1e8-164aad542524",
            "actions": [
                {
                    "name": "PrimaryFingerPos",
                    "type": "Value",
                    "id": "ab0cca5a-8c12-41e2-8776-75d31fc172b3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryFingerPos",
                    "type": "Value",
                    "id": "98b21cb2-6236-4bd7-87c4-aabfb547a3f7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "04f35d7b-ac29-4d12-a519-21dbc016c433",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e0fabf72-a83b-4233-8b47-f08d31d3d13c",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "662be4f1-f872-4fbe-bc11-e5ce3212fc77",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3bf6bc6-45c5-418b-9ea6-6af44b9ae8cb",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}